added limit for portal placements

--- a/imgui.ini
+++ b/imgui.ini
@@ -13,3 +13,18 @@ Pos=59,110
 Size=108,54
 Collapsed=0
 
+[Window][Camera]
+Pos=60,60
+Size=326,100
+Collapsed=0
+
+[Window][Info]
+Pos=60,60
+Size=458,82
+Collapsed=0
+
+[Window][File Chooser]
+Pos=60,60
+Size=247,794
+Collapsed=0
+
