--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ allprojects {
     }
 
     dependencies {
+        implementation 'org.jetbrains:annotations:20.1.0'
+
         // https://mvnrepository.com/artifact/com.google.code.gson/gson
         compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
         // https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket
