--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,9 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-        api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+        /*api  "com.badlogicgames.gdx:gdx-tools:$gdxVersion"{
+            exclude group: 'com.badlogicgames.gdx', module: 'gdx-backend-lwjgl'
+        }*/
         api "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
 
